# mader

./: .gitignore  pyproject.toml
.github/workflows/: pipeline.yaml
infra/: Dockerfile  compose.yaml  entrypoint.sh
mader/: app.py  common.py  database.py  models.py  schemas.py  security.py  utils.py
mader/routers/: auth.py  books.py  romancists.py  users.py
migrations/: env.py
migrations/versions/: 3aab0676fdd1_table_users_created.py  5e1158121326_tables_books_and_romancists_created.py  eb0aa12697d8_table_users_updated.py
tests/: conftest.py  test_app.py  test_auth.py  test_books.py  test_romancists.py  test_security.py  test_users.py
