[tool.poetry]
name = "mader"
version = "0.1.0"
description = ""
authors = ["Thalison <thalissfernandes99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
taskipy = "^1.13.0"
ruff = "^0.5.6"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
